# cleannet

./: settings.gradle.kts
URL Classifier/: .gitignore  API_ANDROID.txt  DEPLOY_EC2.md  app.py  build_domain_registry.py  download_datasets.py  gunicorn.conf.py  pyproject.toml  requirements.txt  scaler.pkl  test_nudenet.py  train_model.py  train_pipeline.py  vectorizer.pkl  wsgi.py
URL Classifier/data/: adult.csv  domain_registry.csv  malware.csv  phishing.csv  safe.csv
URL Classifier/data/seeds/: curated_domains.csv
URL Classifier/deploy/ec2/: cleannet-classifier.service  nginx-flaskapp-http80.conf  nginx-url-classifier.conf.example
URL Classifier/url_classifier/: __init__.py  paths.py
URL Classifier/url_classifier/classification/: __init__.py  classifier.py  content_probe.py  features.py  url_utils.py
URL Classifier/url_classifier/cli/: __init__.py  build_domain_registry.py  download_datasets.py  test_nudenet.py
URL Classifier/url_classifier/domain/: __init__.py  domain_age.py  domain_registry.py
URL Classifier/url_classifier/images/: __init__.py  image_nsfw.py  image_upload.py
URL Classifier/url_classifier/ml/: __init__.py  data_pipeline.py  train_model.py  train_pipeline.py
URL Classifier/url_classifier/web/: __init__.py  app.py  discovery.py
URL Classifier/url_classifier/web/templates/: index.html
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: blocklist_domains.txt  blocklist_keywords.json  (+1 more)
backend/artifacts/: classifier.joblib
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
