[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "url-classifier"
version = "0.1.0"
description = "Layered URL safety classifier with optional Flask UI and ML training"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["url_classifier*"]
